--- a/README.html
+++ b/README.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<link rel="stylesheet" type="text/css" href="resume.css">
-	<title>Georgy Jose</title>
+	<title>Priyanka MP</title>
 </head>
 <body>
 	<div class="container">
@@ -18,16 +18,16 @@
 		<div class="row">
 			<div class="image">
 				<div class="col-md-1"></div>
-				<div class="col-md-5"><img src="image1.JPG" class="img-rounded" width="240" height="320" /></div>
+				<div class="col-md-5"><img src="image.JPG" class="img-rounded" width="240" height="320" /></div>
 			</div>
 			<div class="name">
-				<div class="col-md-6"><p><br><br><b>Georgy Jose</b><br>Vilavinal Vadakkethil<br>Keerukuzhy P.O<br>Thumpamon<br>Mobile No: <a href="https://www.facebook.com/boss.007.rocks">9207131916<br></a>mail: <a href="http://mail.google.com">georgyjose@ieee.org</a></p></div>
+				<div class="col-md-6"><p><br><br><b>Priyanka MP</b><br>MAILAMOOTTIL(H)<br>ITHITHANAM P.O<br>CHANGANACHERRY<br>Mobile No: <a href="">7558039303<br></a>mail: <a href="http://mail.google.com">Priyankamp597@gmail.com</a></p></div>
 			</div>
 	</div>
 	<br>
 	<br>
 	<h2>Career Objective:</h2>
-	<p >Looking for an organization where I can enhance my knowledge and from my academic learning give my best to the organization.</p>
+	<p >Seeking a challenging job in a dynamic  industrial environment so that I can professionally grow and prove my skills as a software engineer. To add valuable assets to your esteemed organisation as an active member by utilising my innovative thinking and creativity.</p>
 	<br>
 	<h2>Academic Qualifications:</h2>
 	<table class="table table-striped">
@@ -35,7 +35,7 @@
 			<th>COURSE</th>
 			<th>NAME OF INSTITUTION</th>
 			<th>YEAR OF PASSING</th>
-			<th>PERCENTILE SCORE</th>
+			<th>% OF MARKS SECURED</th>
 		</thead>
 		<tbody>
 			<tr>
@@ -46,15 +46,15 @@
 			</tr>				
 			<tr>
 				<td>12th Standard</td>
-				<td>St John's School Thumpamon</td>
+				<td>ST.Peter’s  H.S.S,Kurumpanadom</td>
 				<td>2015</td>
-				<td>88</td>
+				<td>97</td>
 			</tr>
 			<tr>
-				<td>10th Standard</td>
-				<td>St John's School Thumpamon</td>
+				<td>S.S.L.C</td>
+				<td>ST.Anne’s  G.H.S.S,Changanacherry</td>
 				<td>2013</td>
-				<td>96</td>
+				<td>95</td>
 			</tr>
 		</tbody>
 	</table>
