--- a/README.html
+++ b/README.html
@@ -3,9 +3,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-	<link rel="stylesheet" type="text/css" href="resume.css">
+	<!-- link to main stylesheet -->
+        <link rel="stylesheet" type="text/css" href="/css/resume.css">
 	<title>Priyanka MP</title>
 </head>
 <body>
