--- a/README.html
+++ b/README.html
@@ -17,7 +17,7 @@
 		<div class="row">
 			<div class="image">
 				<div class="col-md-1"></div>
-				<div class="col-md-5"><img src="image.jpg" class="img-rounded" width="240" height="320" /></div>
+				<div class="col-md-5"><img src="priyankaMP05.github.io/image.jpg" class="img-rounded" width="240" height="320" /></div>
 			</div>
 			<div class="name">
 				<div class="col-md-6"><p><br><br><b>Priyanka MP</b><br>MAILAMOOTTIL(H)<br>ITHITHANAM P.O<br>CHANGANACHERRY<br>Mobile No: <a href="">7558039303<br></a>mail: <a href="http://mail.google.com">Priyankamp597@gmail.com</a></p></div>
