--- a/README.html
+++ b/README.html
@@ -38,22 +38,22 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td> B.Tech  </td>
-				<td> College of Engineering Chengannur  </td>
-				<td> 2019  </td>
-				<td> 85  </td>
+				<td>B.Tech</td>
+				<td>College of Engineering Chengannur</td>
+				<td>2019</td>
+				<td>85</td>
 			</tr>				
 			<tr>
-				<td>  12th Standard  </td>
-				<td>  ST.Peter’s  H.S.S,Kurumpanadom  </td>
-				<td>  2015  </td>
-				<td>  97  </td>
+				<td>12th Standard</td>
+				<td>St.Peter’s  H.S.S,Kurumpanadom</td>
+				<td>2015</td>
+				<td>97</td>
 			</tr>
 			<tr>
-				<td>  S.S.L.C</td>
-				<td>  ST.Anne’s  G.H.S.S,Changanacherry</td>
-				<td>  2013</td>
-				<td>  95</td>
+				<td>S.S.L.C</td>
+				<td>ST.Anne’s  G.H.S.S,Changanacherry</td>
+				<td>2013</td>
+				<td>95</td>
 			</tr>
 		</tbody>
 	</table>
