--- a/README.html
+++ b/README.html
@@ -25,6 +25,7 @@
 	</div>
 	<br>
 	<br>
+	&nbsp
 	<h2>Career Objective:</h2>
 	<p >Seeking a challenging job in a dynamic industrial environment so that I can professionally grow and prove my skills as a software engineer. To add valuable assets to your esteemed organisation as an active member by utilising my innovative thinking and creativity.</p>
 	<br>
